--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ search_full_content      : true
 author:
   name             : "dorbae"
   avatar           : "/assets/images/dorbae.jpeg"
-  bio              : "I am an amazing person."
+  bio              : "Do it, do it!"
   location         : "Seoul, Korea"
   email            : "dorbae.io@gmail.com"
   links:
