--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,10 @@ defaults:
       # 포스트 공유 기능을 활성화 할 것인지
       share: true
       related: true
-      
+
+header:
+  overlay_image: /assets/images/moon.jpg
+  
 comments:
   provider               : "disqus"
   disqus:
