--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,8 @@ header:
   overlay_image: /assets/images/moon.jpg
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-131591242-1
+google_analytics:
+  ua: 'UA-131591242-1'
 
 comments:
   provider               : "disqus"
