--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,15 @@ author:
       icon: "fas fa-fw fa-link"
       url: "https://dorbae.blogspot.kr"
 
+# blog home에 표시될 blog cover image.
+cover: assets/images/moon.png
+
+# Permalinks
+# 각각의 post에 고정주소를 어떤 방식으로 할당할 것인지를 결정
+# 이 값을 바꾸면 작성한 포스트의 저장위치나 파일이름이 변경된다.
+# 참조 : https://jekyllrb-ko.github.io/docs/permalinks/
+permalink: ordinal
+
 # Defaults
 defaults:
   # _posts
