--- a/_config.yml
+++ b/_config.yml
@@ -187,12 +187,12 @@ whitelist:
 #  - <base_path>/tags/my-awesome-tag/index.html ~> path: /tags/
 #  - <base_path/categories/my-awesome-category/index.html ~> path: /categories/
 #  - <base_path/my-awesome-category/index.html ~> path: /
-# category_archive:
-#   type: liquid
-#   path: /categories/
-# tag_archive:
-#   type: liquid
-#   path: /tags/
+category_archive:
+  type: liquid
+  path: /categories/
+tag_archive:
+  type: liquid
+  path: /tags/
 
 #https://github.com/jekyll/jekyll-archives
 # jekyll-archives:
@@ -213,10 +213,3 @@ compress_html:
   clippings: all
   ignore:
     envs: development
-
-
-navigation:
- - title: Home
-   url: /index.html
- - title: Categories
-   url: /category
