Menu navigator Test
Menu navigator Test

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,10 @@
 # main links
 main:
-  - title: "Archive"
-    url: /year-archive/
+  - title: "Apache"
+    url: /category/apache/apache.html
+    sublinks:
+    - title: ActiveMQ
+      url: /category/apache/activemq.html
   - title: "tag"
     url: /tags/
   - title: "Category"
