--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links
-docs:
+main:
   - title: "Apache"
     url: /category/apache/apache
-    children:
+    sublinks:
       - title: "ActiveMQ"
         url: /category/apache/activemq
       - title: "RocketMQ"
@@ -11,3 +11,13 @@ docs:
     url: /tags/
   - title: "Category"
     url: /categories/
+  # - title: "Quick-Start Guide"
+  #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  # - title: "About"
+  #   url: https://mmistakes.github.io/minimal-mistakes/about/
+  # - title: "Sample Posts"
+  #   url: /year-archive/
+  # - title: "Sample Collections"
+  #   url: /collection-archive/
+  # - title: "Sitemap"
+  #   url: /sitemap/
