--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links
-main:
+docs:
   - title: "Apache"
     url: /category/apache/apache
-    sublinks:
+    children:
       - title: "ActiveMQ"
         url: /category/apache/activemq
       - title: "RocketMQ"
