--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,16 @@
 # main links
 docs:
   - title: "Apache"
-    url: /category/apache/apache
+    #url: /category/apache/apache
     children:
       - title: "ActiveMQ"
         url: /category/apache/activemq
       - title: "RocketMQ"
         url: /category/apache/activemq
   - title: "tag"
-    url: /tags/
+    #url: /tags/
   - title: "Category"
-    url: /categories/
+    #url: /categories/
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
