--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,11 +8,11 @@ main:
       - title: "RocketMQ"
         url: /category/apache/activemq
 
-  - title: "tag"
-    #url: /tags/
+  - title: "Tag"
+    url: /tags/
 
   - title: "Category"
-    #url: /categories/
+    url: /categories/
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
