Update sidebar categories
Update sidebar categories

--- a/_data/sidecategory.yml
+++ b/_data/sidecategory.yml
@@ -1,9 +1,10 @@
 toc:
-  - title: Group 1
+  - title: Apache
+    url: /categry/apache/apache
     subfolderitems:
-      - page: Thing 1
-        url: /thing1.html
-      - page: Thing 2
+      - page: ActiveMQ
+        url: /category/apache/activemq.html
+      - page: RocketMQ
         url: /thing2.html
       - page: Thing 3
         url: /thing3.html
