Upload post about JSON
Upload post about JSON

--- a/_data/sidecategory.yml
+++ b/_data/sidecategory.yml
@@ -61,6 +61,8 @@ toc:
         url: /category/java/common
       - page: Eclipse
         url: /category/java/eclipse
+      - page: JSON
+        url: /category/java/json
       - page: Network
         url: /category/java/network
       - page: NIO
