--- a/_data/sidecategory.yml
+++ b/_data/sidecategory.yml
@@ -98,5 +98,5 @@ toc:
         url: /category/python/django
       - page: PyCharm
         url: /category/python/pycharm
-  - title: Utility
-    url: /category/utility/utility
+  - title: Tool
+    url: /category/tool/tool
