Edit side categories
Edit side categories

--- a/_data/sidecategory.yml
+++ b/_data/sidecategory.yml
@@ -13,6 +13,11 @@ toc:
         url: /category/apache/activemq
       - page: RocketMQ
         url: /category/apache/rocketmq
+  - title: BigData
+    url: /categry/bigdata/bigdata
+    subfolderitems:
+      - page: Data Analysis
+        url: /category/bigdata/dataanalysis
   - title: Business
     url: /category/biz/biz
   - title: DBMS
